# roboptim-shared-tests

./: CMakeLists.txt  ChangeLog  common.hh  distance-to-sphere.cc  distance-to-sphere.hh  fixture.hh  hs071-nonscalar-constraints.hh  hs071.hh  hs071_bis.hh  local-libdir.hh.in  serialize.hh  tests.cmake  util.hh
benchmark/: CMakeLists.txt  benchmark_17.cc
common/: CMakeLists.txt  starting-point.cc  throw.cc
manifold/: CMakeLists.txt  GeometricProblem.cc  SO3Problem.cc  conversionTest.cc  dummyTest.cc  manifold_common.hh
qp/: CMakeLists.txt  qp_unconstrained.cc  unconstrained.cc
roboptim/: CMakeLists.txt  distance-to-sphere.cc  simple-square.cc
schittkowski/: CMakeLists.txt  problem_1.cc  problem_10.cc  problem_11.cc  problem_12.cc  problem_13.cc  problem_14.cc  problem_15.cc  problem_16.cc  problem_17.cc  problem_18.cc  problem_19.cc  problem_2.cc  problem_20.cc  problem_21.cc  problem_22.cc  problem_23.cc  problem_24.cc  problem_25.cc  problem_26.cc  problem_27.cc  problem_28.cc  problem_29.cc  problem_3.cc  problem_30.cc  problem_31.cc  problem_32.cc  problem_33.cc  problem_34.cc  problem_35.cc  problem_36.cc  problem_37.cc  problem_38.cc  problem_39.cc  problem_4.cc  problem_40.cc  problem_41.cc  problem_42.cc  problem_43.cc  problem_44.cc  (+31 more)
